--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<div>
+    <button (click)="countVisitedCards()">Show visited cards</button>
+    <p>{{visitedCardsCount}}</p>
+</div>
